--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="menu-items">
             <ul>
                 <li><a href="#">collections</a></li>
-                <li><a href="#">lookbok</a></li>
+                <li><a href="#">lookbook</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
         </div>
